deployment-animals/templates/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-auth
  annotations:
    # type of authentication
    #nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    #nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropriate context why the authentication is required
    #nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - basic'
    nginx.ingress.kubernetes.io/default-backend: default-backend 

spec:
  defaultBackend:
    service:
      name: default-backend
      port:
        number: 80        
  ingressClassName: nginx
  rules:
  - host: b.87.71.194.207.nip.io   
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bear-svc
            port:
              number: 80
  - host: m.87.71.194.207.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: moose-svc
            port:
              number: 80
